# ex4

./: README.md  details.txt
src/: CMakeLists.txt  CacheException.cpp  CacheException.hpp  CacheManager.cpp  CacheManager.hpp  ClientHandle.cpp  ClientHandle.hpp  ErrorCache.cpp  ErrorCache.hpp  ErrorCodeException.cpp  FileCopier.cpp  FileCopier.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  Maze.cpp  Maze.hpp  MazeSolver.hpp  MazeState.cpp  MazeState.hpp  MazeStateTester.cpp  MazeStateTester.hpp  MazeTester.cpp  MazeTester.hpp  MyClientHandler.cpp  MyClientHandler.hpp  PairAndPrice.cpp  PairAndPrice.hpp  ParseBmp.cpp  ParseBmp.hpp  Problem.cpp  Problem.hpp  SearchAlgoritem.cpp  SearchAlgoritem.hpp  Server.cpp  Server.hpp  Soloution.cpp  Soloution.hpp  StatesPair.cpp  StatesPair.hpp  (+12 more)
src/Exceptions/MatrixExceptions/: ErrorCodeException.hpp
src/MatrixExceptions/: ErrorCode.h
